--- a/sunkakar-portfolio/package.json
+++ b/sunkakar-portfolio/package.json
@@ -12,7 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "aws-deploy":"aws s3 sync build/ s3://sunkakr-portfolio --acl public-read"
   },
   "browserslist": {
     "production": [
