--- a/sunkakar-portfolio/package.json
+++ b/sunkakar-portfolio/package.json
@@ -9,6 +9,7 @@
     "latest": "^0.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "^3.3.1"
   },
   "scripts": {
